tests/rosetta/transpiler/Scala/call-a-function-5.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/call-a-function-5.scala:43: error: type mismatch;
 found   : scala.math.BigInt
 required: String
      return ((p.getOrElse("a", null.asInstanceOf[Any]) + b).toString.toDouble + (p.getOrElse("c", null.asInstanceOf[Any])).toString.toDouble).asInstanceOf[BigInt]
                                                          ^
one error found
